<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">


    <ImageView
        android:id="@+id/gamePic"
        android:src="@mipmap/tj_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:id="@+id/textView_GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/gamePic"
        android:layout_toEndOf="@id/gamePic"
        android:text="@string/GameName"
        />
    <TextView
        android:id="@+id/textView_GameGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gamePic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:text="@string/GameGender"
        />
    <TextView
        android:id="@+id/textView_RankValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RankValid"
        android:layout_toEndOf="@id/textView_GameGender"
        android:layout_alignBaseline="@id/textView_GameGender"
        android:layout_marginStart="20dp"
        />
    <Button
        android:id="@+id/button_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Modify"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:layout_below="@id/button_modify"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/button_modify"
        />


</RelativeLayout>