<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_tag_gamesetting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/AddNewGame"
        />
    <TextView
        android:id="@+id/textView_tag_gamename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameName"
        android:layout_below="@id/textView_tag_gamesetting_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/textView_tag_gamegender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameGender"
        android:layout_below="@id/textView_tag_gamename"
        android:layout_alignStart="@id/textView_tag_gamename"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/textView_tag_rankvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RankValid"
        android:layout_below="@id/textView_tag_gamegender"
        android:layout_alignStart="@id/textView_tag_gamename"
        android:layout_marginTop="5dp"
        />
    <EditText
        android:id="@+id/edit_gamename"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textView_tag_gamename"
        android:layout_alignBaseline="@id/textView_tag_gamename"
        android:layout_marginStart="5dp"
        />
    <Spinner
        android:id="@+id/spinner_select_gamegender"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:entries="@array/GameGenders"
        android:layout_alignStart="@id/edit_gamename"
        android:layout_alignBaseline="@id/textView_tag_gamegender"
        />
    <Spinner
        android:id="@+id/spinner_select_rankvalid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:entries="@array/RankValid"
        android:layout_alignStart="@id/edit_gamename"
        android:layout_alignBaseline="@id/textView_tag_rankvalid"
        />











    <Button
        android:id="@+id/button_confirm_addgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        />

</RelativeLayout>